@@ -22,7 +22,7 @@ class Viewer extends Application {
 	{
 		$this->data['pagebody'] = 'homepage';	// this is the view we want shown
 		$this->data['authors'] = $this->quotes->all();
-		$this->render();
+                $this->render();
 	}
 
 	// method to display just a single quote
@@ -30,9 +30,31 @@ class Viewer extends Application {
 	{
 		$this->data['pagebody'] = 'justone';	// this is the view we want shown
 		$this->data = array_merge($this->data, (array) $this->quotes->get($id));
-		$this->render();
+		$this->caboose->needed('jrating','hollywood');
+                $this->data['average'] =
+                  ($this->data['vote_count'] > 0) ?
+                   ($this->data['vote_total'] /
+                  $this->data['vote_count']) : 0;
+                $this->render();
 	}
-
+        
+        // handle a rating
+        function rate() {
+         // detect non-AJAX entry
+         if (!isset($_POST['action'])) redirect("/");
+         // extract parameters
+         $id = intval($_POST['idBox']);
+         $rate = intval($_POST['rate']);
+         // update the posting
+         $record = $this->quotes->get($id);
+         if ($record != null) {
+         $record->vote_total += $rate;
+         $record->vote_count++;
+         $this->quotes->update($record);
+         }
+         $response = 'Thanks for voting!';
+         echo json_encode($response);
+        }
 }
 
 /* End of file Welcome.php */
