@@ -1,4 +1,5 @@
-Date
+Date											Changes
+Mar 1, 2016 [5:01pm]			Incorporated jrating
 Mar 1, 2016 [4:16pm]			Enabled caboose in our webapp
-Mar 1, 2016 [4:02pm]                    Enabled hooks											Changes
+Mar 1, 2016 [4:02pm]      Enabled hooks											
 Mar 1, 2016 [3:47pm]			Updated readme and added changelog
